<resources>
    <string name="app_name">AndroidStore</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_datail">应用详情</string>
    <string name="action_search">搜索</string>
    <string name="drawer_open">打开Drawer</string>
    <string name="drawer_close">关闭Drawer</string>
    <string name="tv_home">首页</string>
    <string name="tv_setting">设置</string>
    <string name="tv_theme">主题</string>
    <string name="tv_scans">安装包管理</string>
    <string name="tv_feedback">反馈</string>
    <string name="tv_updates">检查更新</string>
    <string name="tv_about">关于</string>
    <string name="tv_exit">退出</string>
    <string name="tv_user_name">LeonWu</string>
    <string name="tv_user_email">yuanliang.wu@weimob.com</string>

    <string-array name="tab_names">
        <item>首页</item>
        <item>应用</item>
        <item>游戏</item>
        <item>专题</item>
        <item>分类</item>
        <item>排行</item>
    </string-array>
    <!--  <item>推荐</item> -->

    <string name="load_error">加载失败,点击重试</string>
    <string name="load_more">加载中..</string>
    <string name="load_empty">没有更多数据了</string>
    <string name="app_detail_download">下载:</string>
    <string name="app_detail_version">版本:</string>
    <string name="app_detail_date">时间:</string>
    <string name="app_detail_size">大小:</string>
    <string name="app_detail_introduction">简介</string>
    <string name="app_detail_author">作者:</string>
    <string name="app_state_download">下载</string>
    <string name="app_state_paused">暂停</string>
    <string name="app_state_error">失败</string>
    <string name="app_state_waiting">等待</string>
    <string name="app_state_downloaded">安装</string>
    <string name="bottom_favorites">收藏</string>
    <string name="bottom_share">分享</string>
</resources>
